--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,18 @@
 }
 
 .App-header {
-  background-color: #222;
+    background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-intro {
+.App-controller {
   font-size: large;
+  background-color: #222;
+  color: white;
+
+
 }
 
 @keyframes App-logo-spin {
