--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #222;
+  color: white;
 }
 
 .App-logo {
@@ -8,18 +10,20 @@
 }
 
 .App-header {
-    background-color: #222;
+    /*background-color: #222;*/
   height: 150px;
   padding: 20px;
-  color: white;
+  /*color: white;*/
 }
 
 .App-controller {
   font-size: large;
-  background-color: #222;
-  color: white;
+  /*background-color: #222;*/
+  /*color: white;*/
+}
 
-
+.Presentation {
+    border: 1px solid blue;
 }
 
 @keyframes App-logo-spin {
