--- a/src/App.css
+++ b/src/App.css
@@ -10,20 +10,20 @@
 }
 
 .App-header {
-    /*background-color: #222;*/
   height: 150px;
   padding: 20px;
-  /*color: white;*/
 }
 
 .App-controller {
   font-size: large;
-  /*background-color: #222;*/
-  /*color: white;*/
 }
 
 .Presentation {
     border: 1px solid blue;
+}
+
+.HistoryDisplay th {
+    padding: 5px 15px; 
 }
 
 @keyframes App-logo-spin {
