--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,15 @@ form {
     margin-bottom: 15px;
 }
 label {
-    margin: 0 10px; 
+    margin: 0 10px;
 }
 .form-div {
     margin-left: auto;
     margin-right: auto;
+}
+h5 {
+    display: inline;
+    margin-right: 20px; 
 }
 .btn {
     margin-left: 15px;
