--- a/src/App.scss
+++ b/src/App.scss
@@ -1,84 +1,108 @@
 .App {
   text-align: center;
   background-color: #222;
-  color: white; }
+  color: white;
+}
 
 .App-header {
-  padding: 20px; }
-  .App-header .App-logo {
+  // height: 150px;
+  padding: 20px;
+  .App-logo {
     animation: App-logo-spin infinite 20s linear;
     height: 80px;
     margin-top: 15px;
-    margin-bottom: 15px; }
-  .App-header h1 {
-    font-size: 31px;
-    margin-top: 10px; }
+    margin-bottom: 15px;
+  }
+  h1 {
+      font-size:31px;
+      margin-top: 10px;
+    //   margin-bottom: 20px
+  }
+}
 
 .App-controller {
-  font-size: large; }
-  .App-controller .first-row, .App-controller .second-row {
-    margin-top: 15px;
-    margin-bottom: 25px; }
-  .App-controller .form-inline {
-    display: inline-block; }
-  .App-controller .label-type-1 {
-    display: inline;
-    margin-right: 25px; }
-  .App-controller .first-row .form-inline {
-    margin-right: 20px; }
+  font-size: large;
+  .first-row, .second-row {
+      margin-top:15px;
+      margin-bottom: 25px;
+  }
+  .form-inline {
+      display: inline-block;
+  }
+ .label-type-1 {
+      display: inline;
+      margin-right: 25px;
+  }
+  .first-row {
+      .form-inline {
+          margin-right: 20px;
+      }
+  }
 
+}
 .Presentation {
-  border: 1px solid blue; }
+    border: 1px solid blue;
+}
 
 .HistoryDisplay {
-  margin: 20px auto; }
-  .HistoryDisplay th {
-    padding: 5px 15px; }
+    margin: 20px auto;
+    th {
+        padding: 5px 15px;
+    }
+}
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotateY(0deg); }
-  to {
-    transform: rotateY(360deg); } }
+  from { transform: rotateY(0deg); }
+  to { transform: rotateY(360deg); }
+}
+
 
 /*! Flickity v2.0.9
 http://flickity.metafizzy.co
 ---------------------------------------------- */
-.flickity-enabled {
-  position: relative; }
 
-.flickity-enabled:focus {
-  outline: none; }
+.flickity-enabled {
+  position: relative;
+}
+
+.flickity-enabled:focus { outline: none; }
 
 .flickity-viewport {
   overflow: hidden;
   position: relative;
-  height: 100%; }
+  height: 100%;
+}
 
 .flickity-slider {
   position: absolute;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
 
 /* draggable */
+
 .flickity-enabled.is-draggable {
   -webkit-tap-highlight-color: transparent;
-  tap-highlight-color: transparent;
+          tap-highlight-color: transparent;
   -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
 
 .flickity-enabled.is-draggable .flickity-viewport {
   cursor: move;
   cursor: -webkit-grab;
-  cursor: grab; }
+  cursor: grab;
+}
 
 .flickity-enabled.is-draggable .flickity-viewport.is-pointer-down {
   cursor: -webkit-grabbing;
-  cursor: grabbing; }
+  cursor: grabbing;
+}
 
 /* ---- previous/next buttons ---- */
+
 .flickity-prev-next-button {
   position: absolute;
   top: 50%;
@@ -87,52 +111,55 @@ http://flickity.metafizzy.co
   border: none;
   border-radius: 50%;
   background: white;
-  background: rgba(255, 255, 255, 0.75);
+  background: hsla(0, 0%, 100%, 0.75);
   cursor: pointer;
   /* vertically center */
   -webkit-transform: translateY(-50%);
-  transform: translateY(-50%); }
+          transform: translateY(-50%);
+}
 
-.flickity-prev-next-button:hover {
-  background: white; }
+.flickity-prev-next-button:hover { background: white; }
 
 .flickity-prev-next-button:focus {
   outline: none;
-  box-shadow: 0 0 0 5px #09F; }
+  box-shadow: 0 0 0 5px #09F;
+}
 
 .flickity-prev-next-button:active {
-  opacity: 0.6; }
+  opacity: 0.6;
+}
 
-.flickity-prev-next-button.previous {
-  left: 10px; }
-
-.flickity-prev-next-button.next {
-  right: 10px; }
-
+.flickity-prev-next-button.previous { left: 10px; }
+.flickity-prev-next-button.next { right: 10px; }
 /* right to left */
 .flickity-rtl .flickity-prev-next-button.previous {
   left: auto;
-  right: 10px; }
-
+  right: 10px;
+}
 .flickity-rtl .flickity-prev-next-button.next {
   right: auto;
-  left: 10px; }
+  left: 10px;
+}
 
 .flickity-prev-next-button:disabled {
   opacity: 0.3;
-  cursor: auto; }
+  cursor: auto;
+}
 
 .flickity-prev-next-button svg {
   position: absolute;
   left: 20%;
   top: 20%;
   width: 60%;
-  height: 60%; }
+  height: 60%;
+}
 
 .flickity-prev-next-button .arrow {
-  fill: #333; }
+  fill: #333;
+}
 
 /* ---- page dots ---- */
+
 .flickity-page-dots {
   position: absolute;
   width: 100%;
@@ -141,10 +168,10 @@ http://flickity.metafizzy.co
   margin: 0;
   list-style: none;
   text-align: center;
-  line-height: 1; }
+  line-height: 1;
+}
 
-.flickity-rtl .flickity-page-dots {
-  direction: rtl; }
+.flickity-rtl .flickity-page-dots { direction: rtl; }
 
 .flickity-page-dots .dot {
   display: inline-block;
@@ -154,7 +181,9 @@ http://flickity.metafizzy.co
   background: #333;
   border-radius: 50%;
   opacity: 0.25;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .flickity-page-dots .dot.is-selected {
-  opacity: 1; }
+  opacity: 1;
+}
