--- a/src/App.scss
+++ b/src/App.scss
@@ -62,6 +62,17 @@
     //     margin: 50px;
     //     display: inline-block;
     // }
+    .img-presentation {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        img {
+            width: 30%;
+            height: 30%;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+    }
 }
 
 .HistoryDisplay {
