--- a/src/App.scss
+++ b/src/App.scss
@@ -71,7 +71,7 @@
     //     margin: 50px;
     //     display: inline-block;
     // }
-    .img-presentation {
+    .gallery {
         width: 1150px;
         margin: auto;
         display: flex;
