--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,8 @@
     margin: 20px auto; }
     .App-controller .HistoryDisplay th {
       padding: 5px 15px; }
+    .App-controller .HistoryDisplay .history-row {
+      cursor: pointer; }
 
 .Presentation {
   margin-top: 80px;
