--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
   text-align: center;
-  color: white; }
+  color: white;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: #222; }
 
 .App-header {
   padding: 20px; }
