--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,13 @@
 .App {
   text-align: center;
   color: white;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: #222; 
 }
 
 .App-header {
-  // height: 150px;
   padding: 20px;
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -69,8 +72,6 @@
       }
       .clear-history-btn {
           margin-left: 15px;
-        //   position: relative;
-        //   right: 209px
       }
   }
 }
@@ -81,11 +82,6 @@
     h2 {
         margin-bottom: 20px;
     }
-    // img {
-    //     width: 30%;
-    //     margin: 50px;
-    //     display: inline-block;
-    // }
     .gallery {
         width: 1150px;
         margin: auto;
